# signatory

./: .gitignore  .golangci.yml  .mcp.json  CLAUDE.md  Makefile  QUICKSTART.md  README.md  TROUBLESHOOTING.md  embedded.go  go.mod  go.sum
.claude/: settings.json
.githooks/: post-commit  pre-commit
.github/workflows/: ci.yml
cmd/dogfood-metrics/: daemon.go  daemon_test.go  hook.go  hook_test.go  inspect.go  inspect_test.go  list_sessions.go  list_sessions_test.go  main.go  receiver.go  receiver_test.go  report.go  report_test.go
cmd/dogfood-metrics-smoke/: main.go
cmd/signatory/: analysis.go  analysis_test.go  analysis_timing.go  analysis_timing_test.go  analyze.go  analyze_clone_test.go  analyze_error_test.go  analyze_freshness_test.go  analyze_git_functional_test.go  bounded_read.go  bounded_read_test.go  build_output.go  burn.go  burn_display.go  burn_display_test.go  certs.go  certs_check_test.go  cli_test.go  clone_isolation_test.go  collectors.go  collectors_test.go  compare.go  deltas.go  deltas_confirm.go  deltas_confirm_test.go  deltas_e2e_test.go  deltas_range_test.go  deltas_time.go  deltas_time_test.go  doctor.go  doctor_test.go  format_check.go  format_check_test.go  freetext.go  freetext_test.go  functional_test.go  handoff.go  handoff_deposit_test.go  handoff_provenance_signals_test.go  handoff_test.go  (+50 more)
cmd/smoke-mcp/: main.go
cmd/smoke-pintable/: main.go
cmd/smoke-source-evolution/: main.go
design/: ANTIPATTERNS.md  ImproveProvSignals.md  ROADMAP.md  agent-facing-contract.md  agent-otel.md  agent-output-contract.md  analysis-economics.md  analyst-composability.md  architecture.md  coll7.md  countercampaign.md  deltas.md  deterministic-orchestration.md  docker-clone.md  dogfood-dependency-decisions.md  dogfood-errors.md  entity-burn1.md  entity-model-v2.md  example-analysis-output.md  example-axios-attack.md  example-litellm-attack.md  example-prtscan-attack.md  hardening.md  identity-tracking-plan.md  ingestion-plan.md  license-analysis.md  m6-synthesis-contract.md  mcp-dual-analyst-architecture.md  mcp-interface.md  mcp-protocol-envelopes.md  mcp-server-architecture.md  npm-plan.txt  open-architecture-question.md  open-questions.md  orphanage.md  parsedeep.md  pendingfix.md  platform-mutability.md  posture-relationships.md  potential-pypi.md  (+12 more)
design/analysis/: README.md  atuin-schema-trial-feedback.md  atuin-schema-trial-response.json  atuin-security-review-external-round2.md  atuin-security-review-external.md  atuin.md  composite-assembly-trial-takeover-bait.md  cve-2025-41390.md  photon.md  signatory-security-v1.json  thefuck-provenance-v1.json  thefuck-security-v1.json  thefuck.md
design/architecture/: AST.md  httpx.md
design/archive/: signal-storage-evolution.md
design/codereviews/: README.md  review-1-post-v2-security-db-opus.md  review-2-post-v2-blind-tests-opus.md  review-3-post-v2-tests-sonnet.md
design/dogfood/: GAPS.md  README.md  kong.md  modernc-sqlite.md  mousetrap.md  testify.md
design/handoffs/: README.md  provenance-review-v1.md  security-review-v1.md
design/potential/: anti-subversion.md  composite-assembly-trial-takeover-bait.md  expanded-reporting.md  possible-brew.md
design/prerelease/: PREFLIGHT.md
design/threat-landscape/: 2025-03-14-tj-actions-changed-files.md  2026-04-14-openai-tac-gpt54-cyber.md  2026-04-17-vendor-communication-as-signal.md  2026-04-21-vercel-contextai-incident.md  2026-04-22-mozilla-anthropic-firefox-mythos.md  2026-04-28-llm-decompilation-binaries-as-source.md  2026-04-28-multi-vendor-mythos-parity.md  2026-04-30-aisi-gpt55-evaluation.md  2026-04-30-coordinated-disclosure-collapse.md  2026-05-02-bufferzonecorp-campaign.md  2026-05-12-tanstack-mini-shai-hulud.md  example-identity-analysis-rsc.md  example-xz-utils-cve-2024-3094.md
design/usermanual/: README.md  analysis-flow.md  recording-trust-decisions.md
dogfood-metrics/: README.md
filestore/analysis/: atuin-schema-trial-response.json  atuin-schema-trial-response.json.bak  signatory-provenance-v1.json  signatory-security-v1.json  thefuck-provenance-v1.json
internal/audit/: logger.go  logger_security_test.go  logger_test.go  nofollow_other.go  nofollow_unix.go
internal/certs/: certs.go  certs_test.go  check.go  init.go  profile.go
internal/config/: config.go  config_test.go  handoff.go  handoff_test.go  init.go  init_test.go  resolver.go  resolver_test.go  toml.go  toml_test.go
internal/deltas/: compute.go  compute_test.go  diff.go  diff_test.go  doc.go  render.go  render_test.go  types.go  types_test.go
internal/doctor/: doctor.go  doctor_test.go  probes_compound_test.go  probes_env.go  probes_env_test.go  probes_mcp.go  probes_paths.go  probes_paths_test.go  probes_runtime.go  probes_runtime_test.go  probes_service.go  probes_store.go  probes_tls.go
internal/ecosystem/: detect.go  detect_test.go  provider.go  provider_test.go
internal/engine/: engine.go  engine_test.go
internal/exchange/: enums.go  exchange_test.go  fuzz_test.go  markdown.go  markdown_test.go  parse_structured.go  parse_structured_test.go  types.go  validate.go  validate_test.go
internal/gitenv/: env.go  env_test.go
internal/htmlreport/: assets.go  assets_test.go  htmlreport.go  link_plan.go  link_plan_test.go  purl.go  purl_test.go  render_analyst.go  render_analyst_test.go  render_conclusion.go  render_conclusion_test.go  render_stub.go  render_stub_test.go  render_synthesis.go  render_synthesis_test.go  write_tree.go  write_tree_test.go
internal/httpx/: client.go  client_test.go
internal/identity/: team.go  team_security_test.go  team_test.go
internal/manifest/cargo/testdata/platform-deps/: Cargo.toml
internal/manifest/pypi/testdata/pep621-pep735/: pyproject.toml
internal/manifest/pypi/testdata/pep735-app/: pyproject.toml
internal/manifest/pypi/testdata/poetry-hybrid/: pyproject.toml
internal/manifest/pypi/testdata/poetry-pure-legacy/: pyproject.toml
internal/manifest/pypi/testdata/poetry-pure-modern/: pyproject.toml
scripts/: dogfood-claude.sh  dogfood-hook.sh  smoke-analyze.sh  smoke-cadence-cross-ecosystem.sh
(+441 files in other folders)
