[package]
name = "platform-crate"
version = "0.5.0"
edition = "2021"

[dependencies]
log = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"

[build-dependencies]
cc = "1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.29"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
